Update the html code copied across

--- a/about-me.html
+++ b/about-me.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colors</title>
+  <title>About Me</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
 </head>
@@ -19,7 +19,7 @@
       </a>
     </div>
     <nav class="navigation">
-      <a class="navigation_item u-text-secondary u-body-text" href="about-me.html">About Me</a>
+      <a class="navigation_item u-text-secondary u-body-text active-page" href="about-me.html">About Me</a>
       <a class="navigation_item u-text-secondary u-body-text" href="">Demo Site</a>
 
       <section class="sidebar u-bg-white">
@@ -72,7 +72,7 @@
   </header>
 
 
-  <div class="main-content">
+  <div class="main-content u-bg-primary">
     <section>
       <h1 class="u-heading-1 u-text-secondary">Hi! My name is Abhiram Shaji</h1>
       <h2 class="u-heading-2 u-text-primary">I am an Android / Web developer.</h2>
