--- a/colors.html
+++ b/colors.html
@@ -72,8 +72,8 @@
   </header>
 
   <!-- Color swatches -->
-  <div class="main-content">
-    <section class="color-swatch-container">
+  <div class="main-content u-bg-primary">
+    <section class="color-swatch-container u-bg-white l-p">
       <!-- Background Colors -->
       <div>
         <h2>Background</h2>
