--- a/typography.html
+++ b/typography.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colors</title>
+  <title>Typography</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
 
   <!-- Navbar -->
-  <header class="u-bg-secondary">
+  <header class="u-bg-secondary u-bg-primary">
     <div class="logo">
       <a class="logo_text u-text-secondary u-font-josefin-sans" href="index.html">
         <h2 class="u-heading">Design System</h2>
@@ -25,8 +25,8 @@
       <section class="sidebar u-bg-white">
         <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
         <ul class="sidebar_item">
-          <li><a class="u-text-primary u-body-text active-page" href="colors.html">01 Colours</a></li>
-          <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
+          <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
+          <li><a class="u-text-primary u-body-text active-page" href="typography.html">02 Typography</a></li>
           <li><a class="u-text-primary u-body-text" href="#">03 Logo</a></li>
         </ul>
     
