Update background of typography page

--- a/typography.html
+++ b/typography.html
@@ -72,8 +72,8 @@
   </header>
 
   <!-- Typefaces -->
-  <div class="main-content">
-    <section class="typography-container u-bg-white">
+  <div class="main-content u-bg-primary">
+    <section class="typography-container">
 
       <div class="u-font-josefin-sans typography-container-item">
         <h2 class="u-text-secondary u-heading-1 u-font-bold">Josefin Sans</h2>
