Add styling for mobile navbar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
             </div>
             <input type="checkbox" id="check">
             <label for="check" class="hamburger-btn">
-                <i class="fas ba-bars"></i>
+                <i class="fas fa-bars"></i>
             </label>
+            <ul class="nav-list">
+                <li><a class="active" href="#">about us</a></li>
+                <li><a href="#">plants</a></li>
+                <li><a href="#">additional products</a></li>
+                <li><a href="#">social & news</a></li>
+            </ul>
         </nav>
     </header>
     
