--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Outback nursery</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="u-font-montserrat u-font-semibold u-bg-primary">
             <div class="logo-container">
                 <img class="logo" src="images/logo.png" alt="outback nursery logo">
             </div>
@@ -17,8 +17,8 @@
             <label for="check" class="hamburger-btn">
                 <i class="fas fa-bars"></i>
             </label>
-            <ul class="nav-list">
-                <li><a class="active" href="#">about us</a></li>
+            <ul class="u-text-primary nav-list u-bg-primary">
+                <li><a href="#">about us</a></li>
                 <li><a href="#">plants</a></li>
                 <li><a href="#">additional products</a></li>
                 <li><a href="#">social & news</a></li>
