--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <nav class="u-font-montserrat u-font-semibold u-bg-primary">
@@ -25,6 +27,21 @@
             </ul>
         </nav>
     </header>
-    
+
+    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+        <h1 class="l-my-1">Welcome To Outback Bursery</h1>
+        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum</p>
+
+        <div class="l-flex l-flex-col l-justify-center l-align-center">
+            <a href="#" class="button">About Us</a>
+            <a href="#" class="button">Get In Touch</a>
+        </div>
+    </section>
+
 </body>
+
 </html>
