--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+    <!-- Navigation -->
     <header>
         <nav class="u-font-montserrat u-font-semibold u-bg-primary">
             <div class="logo-container">
@@ -28,9 +30,12 @@
         </nav>
     </header>
 
+    <!-- Hero Section -->
+
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
         <h1 class="l-my-1">Welcome To Outback Bursery</h1>
-        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
@@ -39,6 +44,20 @@
         <div class="l-flex l-flex-col l-justify-center l-align-center">
             <a href="#" class="button">About Us</a>
             <a href="#" class="button">Get In Touch</a>
+        </div>
+    </section>
+
+    <!-- Explore Section -->
+
+    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+        <h1 class="l-my-1">Discover your perfect plant</h1>
+        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+
+        <div class="l-flex l-flex-col l-justify-center l-align-center">
+            <a href="#" class="button">Explore Plants</a>
         </div>
     </section>
 
