Create and style additional product section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
         </div>
     </section>
 
+    <!-- Additional Products Section -->
+
+    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+        <h1 class="l-my-1">Our Other Products</h1>
+        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+
+        <div class="l-flex l-flex-col l-justify-center l-align-center">
+            <a href="#" class="button">Products & Services</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
