Create and style gift card section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
         </div>
     </section>
 
+    <!-- Gift Card Section -->
+
+    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+        <h1 class="l-my-1">Grab A Gift Card</h1>
+        <p class=" text-center">Lorem ipsum dolor sit amet</p>
+        <p class=" text-center">Lorem ipsum dolor sit amet</p>
+        <p class=" text-center">Lorem ipsum dolor sit amet</p>
+        <p class=" text-center">Lorem ipsum dolor sit amet</p>
+
+        <div class="l-flex l-flex-col l-justify-center l-align-center">
+            <a href="#" class="button">Products & Services</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
