--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
         </div>
     </section>
 
+    <!-- Social & news Section -->
+
+    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+        <h1 class="l-my-1">Social & News</h1>
+        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+
+        <div class="l-flex l-flex-col l-justify-center l-align-center">
+            <a href="#" class="button">Stay Updated</a>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
