Create and style get in touch form

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Explore Section -->
 
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h1 class="l-my-1">Discover your perfect plant</h1>
+        <h2 class="l-my-1">Discover your perfect plant</h2>
         <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -64,7 +64,7 @@
     <!-- Additional Products Section -->
 
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h1 class="l-my-1">Our Other Products</h1>
+        <h2 class="l-my-1">Our Other Products</h2>
         <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -78,7 +78,7 @@
     <!-- Gift Card Section -->
 
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h1 class="l-my-1">Grab A Gift Card</h1>
+        <h2 class="l-my-1">Grab A Gift Card</h2>
         <p class=" text-center">Lorem ipsum dolor sit amet</p>
         <p class=" text-center">Lorem ipsum dolor sit amet</p>
         <p class=" text-center">Lorem ipsum dolor sit amet</p>
@@ -92,7 +92,7 @@
     <!-- Social & news Section -->
 
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h1 class="l-my-1">Social & News</h1>
+        <h2 class="l-my-1">Social & News</h2>
         <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -101,6 +101,27 @@
         <div class="l-flex l-flex-col l-justify-center l-align-center">
             <a href="#" class="button">Stay Updated</a>
         </div>
+    </section>
+
+    <!-- Get in touch form-->
+
+    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+        <h2 class="l-my-1">Get In Touch</h2>
+
+
+        <form>
+            <input type="text" id="exampleInput" name="exampleInput" placeholder="First Name">
+            <input type="text" id="exampleInput" name="exampleInput" placeholder="Last Name">
+
+            <input type="text" id="exampleInput" name="exampleInput" placeholder="Email">
+            <input type="text" id="exampleInput" name="exampleInput" placeholder="Message">
+
+            <div class="l-flex l-flex-col l-justify-center l-align-center">
+                <a href="#" class="button">Submit</a>
+            </div>
+        </form>
+
+
     </section>
 
 
