Create and style footer

--- a/index.html
+++ b/index.html
@@ -129,6 +129,22 @@
         
     </section>
 
+    <!-- Footer Section -->
+
+    <footer class="l-flex ">
+        <h2>Contact</h2>
+        <div >
+            <h2>Address</h2>
+            <p>1234 Street Name, City, Country</p>
+            <h2>Email</h2>
+            <p>contact@example.com</p>
+            <h2>Phone</h2>
+            <p>+1 234 567 8900</p>
+        </div>
+
+        <h4>© 2024 Outback Nursery. All rights reserved.</h4>
+    </footer>
+
 
 </body>
 
