Style the hero section with background image and transparent card

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 
     <!-- Hero Section -->
 
-    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+    <section class="hero-bg l-p">
+        <div class="c-card l-flex l-flex-col l-justify-center l-align-center l-p text-center">
         <h1 class="l-my-1">Welcome To Outback Bursery</h1>
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
@@ -45,6 +46,7 @@
             <a href="#" class="button">About Us</a>
             <a href="#" class="button">Get In Touch</a>
         </div>
+    </div>
     </section>
 
     <!-- Explore Section -->
