--- a/index.html
+++ b/index.html
@@ -32,21 +32,27 @@
 
     <!-- Hero Section -->
 
-    <section class="hero-bg l-p">
-        <div class="c-card l-flex l-flex-col l-justify-center l-align-center l-p text-center">
-        <h1 class="l-my-1">Welcome To Outback Bursery</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum</p>
+    <section class="hero-bg l-p l-flex l-justify-center l-align-center">
+        <div class="c-card c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center">
+                <h1 class="l-my-1">Welcome To Outback Bursery</h1>
+                <div class="hero-container l-flex l-flex-col l-justify-center l-align-center l-p text-center">
+                <p class="hero-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea
+                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit
+                    anim id est laborum</p>
 
-        <div class="l-flex l-flex-col l-justify-center l-align-center">
-            <a href="#" class="button">About Us</a>
-            <a href="#" class="button">Get In Touch</a>
+                <div class="l-flex l-flex-col l-justify-center l-align-center">
+                    <a href="#" class="button">About Us</a>
+                    <a href="#" class="button">Get In Touch</a>
+                </div>
+            </div>
         </div>
-    </div>
     </section>
 
     <!-- Explore Section -->
@@ -128,14 +134,14 @@
 
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
         <h2 class="l-my-1">Hear From Our Plant Parents</h2>
-        
+
     </section>
 
     <!-- Footer Section -->
 
     <footer class="l-flex ">
         <h2>Contact</h2>
-        <div >
+        <div>
             <h2>Address</h2>
             <p>1234 Street Name, City, Country</p>
             <h2>Email</h2>
