Add button styling

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     mollit
                     anim id est laborum</p>
 
-                <div class="l-flex l-flex-col l-justify-center l-align-center">
-                    <a href="#" class="button">About Us</a>
-                    <a href="#" class="button">Get In Touch</a>
+                <div class="l-flex l-flex-col l-justify-center l-align-center l-m l-p">
+                    <a href="#" class="button l-p">About Us</a>
+                    <a href="#" class="button l-p">Get In Touch</a>
                 </div>
             </div>
         </div>
