--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Navigation -->
     <header>
-        <nav class="u-font-montserrat u-font-semibold u-bg-primary">
+        <nav class="u-font-montserrat u-font-semibold">
             <div class="logo-container">
                 <img class="logo" src="images/logo.png" alt="outback nursery logo">
             </div>
@@ -34,8 +34,8 @@
 
     <section class="hero-bg l-p l-flex l-justify-center l-align-center">
         <div class="c-card c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center">
-                <h1 class="l-my-1">Welcome To Outback Bursery</h1>
-                <div class="hero-container l-flex l-flex-col l-justify-center l-align-center l-p text-center">
+            <h1 class="l-my-1">Welcome To Outback Nursery</h1>
+            <div class="hero-container l-flex l-flex-col l-justify-center l-align-center l-p text-center">
                 <p class="hero-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
                     ut labore et dolore
@@ -48,72 +48,80 @@
                     anim id est laborum</p>
 
                 <div class="l-flex l-flex-col l-justify-center l-align-center l-m l-p">
-                    <a href="#" class="button l-p">About Us</a>
-                    <a href="#" class="button l-p">Get In Touch</a>
+                    <a href="#" class="button l-p u-font-bold">About Us</a>
+                    <a href="#" class="button l-p u-font-bold">Get In Touch</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Explore Section -->
+    <div class="section-combo">
 
-    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h2 class="l-my-1">Discover your perfect plant</h2>
-        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</p>
+        <!-- Explore Section -->
 
-        <div class="l-flex l-flex-col l-justify-center l-align-center">
-            <a href="#" class="button">Explore Plants</a>
-        </div>
-    </section>
+        <section class="explore-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            <h2 class="l-my-1">Discover your perfect plant</h2>
+            <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat.</p>
 
-    <!-- Additional Products Section -->
+            <div class="l-flex l-flex-col l-justify-center l-align-center">
+                <a href="#" class="button l-p u-font-bold">Explore Plants</a>
+            </div>
+        </section>
 
-    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h2 class="l-my-1">Our Other Products</h2>
-        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</p>
+        <!-- Additional Products Section -->
 
-        <div class="l-flex l-flex-col l-justify-center l-align-center">
-            <a href="#" class="button">Products & Services</a>
-        </div>
-    </section>
+        <section class="products-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            <h2 class="l-my-1">Our Other Products</h2>
+            <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat.</p>
 
-    <!-- Gift Card Section -->
+            <div class="l-flex l-flex-col l-justify-center l-align-center">
+                <a href="#" class="button l-p u-font-bold">Products & Services</a>
+            </div>
+        </section>
+    </div>
 
-    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h2 class="l-my-1">Grab A Gift Card</h2>
-        <p class=" text-center">Lorem ipsum dolor sit amet</p>
-        <p class=" text-center">Lorem ipsum dolor sit amet</p>
-        <p class=" text-center">Lorem ipsum dolor sit amet</p>
-        <p class=" text-center">Lorem ipsum dolor sit amet</p>
 
-        <div class="l-flex l-flex-col l-justify-center l-align-center">
-            <a href="#" class="button">Products & Services</a>
-        </div>
-    </section>
+    <div class="section-combo">
 
-    <!-- Social & news Section -->
+        <!-- Gift Card Section -->
 
-    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h2 class="l-my-1">Social & News</h2>
-        <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</p>
+        <section class="giftcard-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            <h2 class="l-my-1">Grab A Gift Card</h2>
+            <p class=" text-center">Lorem ipsum dolor sit amet</p>
+            <p class=" text-center">Lorem ipsum dolor sit amet</p>
+            <p class=" text-center">Lorem ipsum dolor sit amet</p>
+            <p class=" text-center">Lorem ipsum dolor sit amet</p>
 
-        <div class="l-flex l-flex-col l-justify-center l-align-center">
-            <a href="#" class="button">Stay Updated</a>
-        </div>
-    </section>
+            <div class="l-flex l-flex-col l-justify-center l-align-center">
+                <a href="#" class="button l-p u-font-bold">Products & Services</a>
+            </div>
+        </section>
+
+        <!-- Social & news Section -->
+
+        <section class="social-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            <h2 class="l-my-1">Social & News</h2>
+            <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat.</p>
+
+            <div class="l-flex l-flex-col l-justify-center l-align-center">
+                <a href="#" class="button l-p u-font-bold">Stay Updated</a>
+            </div>
+        </section>
+
+    </div>
 
     <!-- Get in touch form-->
 
-    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+    <section class="c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
         <h2 class="l-my-1">Get In Touch</h2>
 
         <form>
@@ -124,7 +132,7 @@
             <input type="text" id="exampleInput" name="exampleInput" placeholder="Message">
 
             <div class="l-flex l-flex-col l-justify-center l-align-center">
-                <a href="#" class="button">Submit</a>
+                <a href="#" class="button l-p u-font-bold">Submit</a>
             </div>
         </form>
 
@@ -140,13 +148,12 @@
     <!-- Footer Section -->
 
     <footer class="l-flex ">
-        <h2>Contact</h2>
         <div>
-            <h2>Address</h2>
+            <h3>Address</h3>
             <p>1234 Street Name, City, Country</p>
-            <h2>Email</h2>
+            <h3>Email</h3>
             <p>contact@example.com</p>
-            <h2>Phone</h2>
+            <h3>Phone</h3>
             <p>+1 234 567 8900</p>
         </div>
 
