--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
 
     <!-- Get in touch form-->
 
-    <section class="c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <h2 class="l-my-1">Get In Touch</h2>
+    <section class="u-bg-primary l-p">
+        <div class="form-container c-card l-flex l-flex-col l-justify-center l-align-center l-p">
+            <h2 class="l-my-1">Get In Touch</h2>
 
-        <form>
-            <input type="text" id="exampleInput" name="exampleInput" placeholder="First Name">
-            <input type="text" id="exampleInput" name="exampleInput" placeholder="Last Name">
+
+            <input type="text" id="exampleInput" name="exampleInput" placeholder="Name">
 
             <input type="text" id="exampleInput" name="exampleInput" placeholder="Email">
             <input type="text" id="exampleInput" name="exampleInput" placeholder="Message">
@@ -134,7 +134,8 @@
             <div class="l-flex l-flex-col l-justify-center l-align-center">
                 <a href="#" class="button l-p u-font-bold">Submit</a>
             </div>
-        </form>
+
+        </div>
 
     </section>
 
