--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- testimonial Section -->
 
     <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
-        <div class="form-container l-flex l-flex-col l-py-1">
+        <div class="form-container l-flex l-flex-col l-py-1 l-flex-row-desktop">
 
             <!-- Accordion Item 1 -->
             <div class="accordion-item">
