Add more empty html pages

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <!-- Navigation -->
     <header>
         <nav class="u-font-montserrat u-font-semibold">
-            <div class="logo-container">
+            <a href="/index.html" class="logo-container">
                 <img class="logo" src="images/logo.png" alt="outback nursery logo">
-            </div>
+            </a>
             <input type="checkbox" id="check">
             <label for="check" class="hamburger-btn">
                 <i class="fas fa-bars"></i>
             </label>
             <ul class="u-text-primary nav-list u-bg-primary">
-                <li><a href="#">about us</a></li>
-                <li><a href="#">plants</a></li>
-                <li><a href="#">additional products</a></li>
-                <li><a href="#">social & news</a></li>
+                <li><a href="/coming-soon.html">about us</a></li>
+                <li><a href="/coming-soon.html">plants</a></li>
+                <li><a href="/coming-soon.html">additional products</a></li>
+                <li><a href="/coming-soon.html">social & news</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
 
     <section class="hero-bg l-p l-flex l-justify-center l-align-center">
         <div class="c-card c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center">
-            <h1 class="l-my-1">Welcome To Outback Nursery</h1>
+            <h1 class="l-my-1 u-hero-headline">Welcome To Outback Nursery</h1>
             <div class="hero-container l-flex l-flex-col l-justify-center l-align-center l-p text-center">
                 <p class="hero-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
