Add testimonial and contact section background

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Get in touch form-->
 
     <section class="u-bg-primary l-p">
-        <div class="form-container c-card l-flex l-flex-col l-justify-center l-align-center l-p">
+        <div class="form-container c-card l-flex l-flex-col l-justify-center l-align-center l-p contact-bg">
             <h2 class="l-my-1">Get In Touch</h2>
 
 
@@ -145,7 +145,7 @@
         <div class="form-container l-flex l-flex-col l-py-1 l-flex-row-desktop">
 
             <!-- Accordion Item 1 -->
-            <div class="accordion-item">
+            <div class="accordion-item testimonials-bg">
                 <button class="accordion-toggle u-heading u-heading-2"
                     onclick="toggleAccordion('accordion-content-1', this)">
                     Mark Thompson
@@ -162,7 +162,7 @@
             </div>
 
             <!-- Accordion Item 2 -->
-            <div class="accordion-item">
+            <div class="accordion-item testimonials-bg">
                 <button class="accordion-toggle u-heading u-heading-2"
                     onclick="toggleAccordion('accordion-content-2', this)">
                     Emily Jenkins
@@ -178,7 +178,7 @@
             </div>
 
             <!-- Accordion Item 3 -->
-            <div class="accordion-item">
+            <div class="accordion-item testimonials-bg">
                 <button class="accordion-toggle u-heading u-heading-2"
                     onclick="toggleAccordion('accordion-content-3', this)">
                     Susan Harper
