Add overlays and card images

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <!-- Hero Section -->
 
     <section class="hero-bg l-p l-flex l-justify-center l-align-center">
-        <div class="c-card c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center">
+        <div class="white-overlay c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center">
             <h1 class="l-my-1 u-hero-headline">Welcome To Outback Nursery</h1>
             <div class="hero-container l-flex l-flex-col l-justify-center l-align-center l-p text-center">
-                <p class="hero-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <p class="hero-p ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
                     ut labore et dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -60,8 +60,11 @@
         <!-- Explore Section -->
 
         <section class="explore-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            <figure class="card__image-container">
+                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+            </figure>
             <h2 class="l-my-1">Discover your perfect plant</h2>
-            <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat.</p>
@@ -74,8 +77,11 @@
         <!-- Additional Products Section -->
 
         <section class="products-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            <figure class="card__image-container">
+                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+            </figure>
             <h2 class="l-my-1">Our Other Products</h2>
-            <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat.</p>
@@ -92,22 +98,30 @@
         <!-- Gift Card Section -->
 
         <section class="giftcard-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            <figure class="card__image-container">
+                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+            </figure>
             <h2 class="l-my-1">Grab A Gift Card</h2>
-            <p class=" text-center">Lorem ipsum dolor sit amet</p>
-            <p class=" text-center">Lorem ipsum dolor sit amet</p>
-            <p class=" text-center">Lorem ipsum dolor sit amet</p>
-            <p class=" text-center">Lorem ipsum dolor sit amet</p>
+            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat.</p>
 
             <div class="l-flex l-flex-col l-justify-center l-align-center">
-                <a href="#" class="button l-p u-font-bold">Products & Services</a>
+                <a href="#" class="button l-p u-font-bold">Grab a giftcard</a>
             </div>
+
         </section>
 
         <!-- Social & news Section -->
 
         <section class="social-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+            
+            <figure class="card__image-container">
+                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+            </figure>
             <h2 class="l-my-1">Social & News</h2>
-            <p class=" text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat.</p>
@@ -152,12 +166,12 @@
                     <i class="fas fa-chevron-down accordion-icon"></i>
                 </button>
                 <div id="accordion-content-1" class="accordion-content u-body-text">
-                    <p class="u-text-primary">"As a gardening enthusiast, I have visited many nurseries, but the Outback
+                    <p class="u-text-primary white-overlay">"As a gardening enthusiast, I have visited many nurseries, but the Outback
                         Nursery stands out for its unique selection of native plants. Their knowledgeable staff helped
                         me choose the perfect shrubs for my arid garden. The quality and health of their plants are
                         exceptional. Highly recommended for anyone looking to add some native beauty to their
                         landscape!"</p>
-                    <p class="u-text-secondary">- John Doe, CEO of Acme Corp</p>
+                    <p class="u-text-secondary u-font-semibold">- John Doe, CEO of Acme Corp</p>
                 </div>
             </div>
 
@@ -169,11 +183,11 @@
                     <i class="fas fa-chevron-down accordion-icon"></i>
                 </button>
                 <div id="accordion-content-2" class="accordion-content u-body-text">
-                    <p class="u-text-primary">"I recently moved to the area and wanted to create a garden that reflects
+                    <p class="u-text-primary white-overlay">"I recently moved to the area and wanted to create a garden that reflects
                         the local flora. Outback Nursery offered me not just plants but also valuable advice on
                         sustainable gardening. Their passion for conservation and the variety of native plants they have
                         is impressive. My garden is now thriving, thanks to their top-notch plants and guidance."</p>
-                    <p class="u-text-secondary">- Jane Smith, Founder of Startup XYZ</p>
+                    <p class="u-text-secondary u-font-semibold">- Jane Smith, Founder of Startup XYZ</p>
                 </div>
             </div>
 
@@ -185,13 +199,11 @@
                     <i class="fas fa-chevron-down accordion-icon"></i>
                 </button>
                 <div id="accordion-content-3" class="accordion-content u-body-text">
-                    <p class="u-text-primary">"Finding Outback Nursery was a game-changer for my landscaping business.
+                    <p class="u-text-primary white-overlay">"Finding Outback Nursery was a game-changer for my landscaping business.
                         The diversity and quality of their native plant selection are unparalleled. Their staff is not
                         only knowledgeable but also genuinely enthusiastic about helping me find the right plants for my
-                        projects. I've received numerous compliments from clients on the beautiful, resilient plants
-                        sourced from Outback Nursery. They truly are the best in the region for anyone serious about
-                        native gardening!"</p>
-                    <p class="u-text-secondary">- Alex Johnson, Project Manager at Innovative Solutions</p>
+                        projects."</p>
+                    <p class="u-text-secondary u-font-semibold">- Alex Johnson, Project Manager at Innovative Solutions</p>
                 </div>
             </div>
 
