Create logo html

--- a/colors.html
+++ b/colors.html
@@ -75,7 +75,7 @@
 
   <!-- Spacing properties -->
   <div class="design-system-content u-bg-secondary">
-    <section class="color-swatch-container u-bg-white">
+    <section class="">
       <!-- Background Colors -->
       <div class="c-card l-my-1">
         <h2>Background</h2>
